-modifications  dans typography.scss : réduction des font-size des menus ; -changements dans menus.scss : modification des margin et padding pour la version small mobile afin de laisser la place au texte des menus, -modification dans le fichire html du menu "la note enchantée"  : rectification de la recette du homard et rectification de majuscule dans la recette de la glace.

--- a/menu_the_enchanted_note.html
+++ b/menu_the_enchanted_note.html
@@ -91,7 +91,7 @@
 
                 <div class="menu__container-selection">
 
-                    <h3 class="menu__name">Homard et espuma de pommes de terre au paprika</h3>
+                    <h3 class="menu__name">Homard et espuma de pommes de terre</h3>
 
                     <p class="menu__details">Mariné aux zests d'orange<span class="menu__price">20 €</span></p>
                     <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
@@ -174,7 +174,7 @@
 
                 <div class="menu__container-selection">
                     <h3 class="menu__name">Macaron noisette et chocolat</h3>
-                    <p class="menu__details">GLace au caramel brun et sel de Guérande<span class="menu__price">18
+                    <p class="menu__details">Glace au caramel brun et sel de Guérande<span class="menu__price">18
                             €</span></p>
                     <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
