--- a/menu_french_style.html
+++ b/menu_french_style.html
@@ -33,15 +33,188 @@
 
     </header>
 
-    <main class="">
-
-            <div class="image">
-                <img class="image" src="assets/img/A_la_Française.jpg"
+    <div class="heading-image">
+        <img class="main-container__img" src="assets/img/A_la_Française.jpg"
                     alt="restaurant à la Française">
+    </div>
+
+    <main class="main-container">
+
+        <div class="main-container__heading">
+
+            <h1 class="main-container__restaurant">À la française</h1>
+
+            <button class="restaurant-like"><i class="fa-regular fa-heart"></i></button>
+
+            <div class="restaurant-like__after ">
+                <div class="restaurant-like__after-part-right"></div>
+                <div class="restaurant-like__after-part-middle"></div>
+                <div class="restaurant-like__after-part-left"></div>
             </div>
-            
+
+        </div>
+
+        <section class="menu">
+
+            <div class="menu__title-container">
+
+                <h2 class="menu__heading">ENTRÉES</h2>
+                <div class="menu__underline"></div>
+
+            </div>
+
+            <div class="menu__selection menu__selection--first-apparition">
+
+                <div class="menu__container-selection">
+                    <h3 class="menu__name">Tartare de poulpe acidulé</h3>
+                    <p class="menu__details">Aux zests d'orange<span class="menu__price">25 €</span></p>
+
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
+                </div>
+
+            </div>
+
+            </div>
+
+            <div class="menu__selection menu__selection--second-apparition">
+
+                <div class="menu__container-selection">
+
+                    <h3 class="menu__name">Velouté de légumes d'antan</h3>
+                    <p class="menu__details">Carottes, panais, topinambour<span class="menu__price">35 €</span></p>
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
+                </div>
+
+            </div>
+
+            <div class="menu__selection menu__selection--third-apparition">
+
+                <div class="menu__container-selection">
+
+                    <h3 class="menu__name">Soupe à l'oignon</h3>
+
+                    <p class="menu__details">Revisitée<span class="menu__price">20 €</span></p>
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
+                </div>
+
+            </div>
+
+        </section>
+
+        <section class="menu">
+
+            <div class="menu__title-container">
+
+                <h2 class="menu__heading">PLATS</h2>
+
+                <div class="menu__underline"></div>
+
+            </div>
+
+            <div class="menu__selection menu__selection--first-apparition">
+
+                <div class="menu__container-selection">
+
+                    <h3 class="menu__name">Coquilles Saint-Jacques</h3>
+                    <p class="menu__details">Accompagnée d'une purée de panais<span class="menu__price">40 €</span></p>
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
+                </div>
+
+            </div>
+
+            </div>
+
+            <div class="menu__selection menu__selection--second-apparition">
+
+                <div class="menu__container-selection">
+
+                    <h3 class="menu__name">Magret de canard</h3>
+                    <p class="menu__details">Et parmentier de pommes de terres<span class="menu__price">35 €</span></p>
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
+                </div>
+
+            </div>
+
+            <div class="menu__selection menu__selection--third-apparition">
+
+                <div class="menu__container-selection">
+
+                    <h3 class="menu__name">Pigeonneau d'Ille-et-Vilaine</h3>
+
+                    <p class="menu__details">Sur son lit de gnocchis aux légumes<span class="menu__price">44 €</span></p>
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
+                </div>
+
+            </div>
+
+        </section>
+
+        <section class="menu">
+
+            <div class="menu__title-container">
+
+                <h2 class="menu__heading">DESSERTS</h2>
+                <div class="menu__underline"></div>
+
+            </div>
+
+            <div class="menu__selection menu__selection--first-apparition">
+
+                <div class="menu__container-selection">
+                    <h3 class="menu__name">Pétales de violettes glacées</h3>
+                    <p class="menu__details">Et purée de noisettes<span class="menu__price">18 €</span></p>
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
+                </div>
+
+            </div>
+
+            <div class="menu__selection menu__selection--second-apparition">
+
+                <div class="menu__container-selection">
+
+                    <h3 class="menu__name">Fondant au chocolat</h3>
+                    <p class="menu__details">Revisité<span class="menu__price">22 €</span></p>
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
+                </div>
+
+            </div>
+
+            <div class="menu__selection menu__selection--third-apparition">
+
+                <div class="menu__container-selection">
+                    <h3 class="menu__name">Millefeuille croustillant</h3>
+                    <p class="menu__details">Myrtilles et pâte d'amande<span class="menu__price">23 €</span></p>
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
+                </div>
+
+            </div>
+
+        </section>
+
+        <div class="button-container">
+            <button class="button-action">
+                Commander
+            </button>
+        </div>
 
     </main>
+
+    <footer>
+        <nav class="nav">
+            <h2 class="nav__logo">ohmyfood</h2>
+            <ul class="nav__container">
+                <li><a class="nav__link-icon nav__link--color" href="#" title="click here"><i
+                            class="fa-solid fa-utensils"></i>Proposer un
+                        restaurant</a></li>
+                <li><a class="nav__link-icon nav__link--color" href="#" title="click here"><i
+                            class="fa-solid fa-handshake-angle fa-sm"></i>Devenir
+                        partenaire</a></li>
+                <li><a class="nav__link nav__link--color" href="#" title="click here">Mentions légales</a></li>
+                <li><a class="nav__link nav__link--color" href="mailto:example@example.com"
+                        title="click here">Contact</a></li>
+            </ul>
+        </nav>
+    </footer>
 
 
 </body>
