--- a/menu_the_palette_of_taste.html
+++ b/menu_the_palette_of_taste.html
@@ -33,11 +33,188 @@
 
     </header>
 
+    <div class="heading-image">
+        <img class="main-container__img" src="assets/img//La_palette_du_goût.jpg" alt="restaurant la note enchantée">
+    </div>
 
-    <main>
+    <main class="main-container">
+
+        <div class="main-container__heading">
+
+            <h1 class="main-container__restaurant">La palette du goût</h1>
+
+            <button class="restaurant-like"><i class="fa-regular fa-heart"></i></button>
+
+            <div class="restaurant-like__after ">
+                <div class="restaurant-like__after-part-right"></div>
+                <div class="restaurant-like__after-part-middle"></div>
+                <div class="restaurant-like__after-part-left"></div>
+            </div>
+
+        </div>
+
+        <section class="menu">
+
+            <div class="menu__title-container">
+
+                <h2 class="menu__heading">ENTRÉES</h2>
+                <div class="menu__underline"></div>
+
+            </div>
+
+            <div class="menu__selection menu__selection--first-apparition">
+
+                <div class="menu__container-selection">
+                    <h3 class="menu__name">Fricassé d'escargot</h3>
+                    <p class="menu__details">Au piment d'espelette<span class="menu__price">25 €</span>
+                    </p>
+
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
+                </div>
+
+            </div>
+
+            </div>
+
+            <div class="menu__selection menu__selection--second-apparition">
+
+                <div class="menu__container-selection">
+
+                    <h3 class="menu__name">Foie gras de canard mi-cuit</h3>
+                    <p class="menu__details">Et ses copeaux de truffe noire<span class="menu__price">35 €</span></p>
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
+                </div>
+
+            </div>
+
+            <div class="menu__selection menu__selection--third-apparition">
+
+                <div class="menu__container-selection">
+
+                    <h3 class="menu__name">Oeuf au plat</h3>
+
+                    <p class="menu__details">Assaisonné à la truffe sur lit de cresson<span class="menu__price">20 €</span></p>
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
+                </div>
+
+            </div>
+
+        </section>
+
+        <section class="menu">
+
+            <div class="menu__title-container">
+
+                <h2 class="menu__heading">PLATS</h2>
+
+                <div class="menu__underline"></div>
+
+            </div>
+
+            <div class="menu__selection menu__selection--first-apparition">
+
+                <div class="menu__container-selection">
+
+                    <h3 class="menu__name">Filet de boeuf aux herbes</h3>
+                    <p class="menu__details">Accompagnée de sa ribambelle de légumes croquants<span class="menu__price">40 €</span></p>
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
+                </div>
+
+            </div>
+
+            </div>
+
+            <div class="menu__selection menu__selection--second-apparition">
+
+                <div class="menu__container-selection">
+
+                    <h3 class="menu__name">Parmentier de queue de boeuf</h3>
+                    <p class="menu__details">A la truffe sur sa purée de panais<span class="menu__price">35 €</span></p>
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
+                </div>
+
+            </div>
+
+            <div class="menu__selection menu__selection--third-apparition">
+
+                <div class="menu__container-selection">
+
+                    <h3 class="menu__name">Filet de turbot</h3>
+
+                    <p class="menu__details">Aux agrumes<span class="menu__price">44 €</span></p>
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
+                </div>
+
+            </div>
+
+        </section>
+
+        <section class="menu">
+
+            <div class="menu__title-container">
+
+                <h2 class="menu__heading">DESSERTS</h2>
+                <div class="menu__underline"></div>
+
+            </div>
+
+            <div class="menu__selection menu__selection--first-apparition">
+
+                <div class="menu__container-selection">
+                    <h3 class="menu__name">Paris-Brest</h3>
+                    <p class="menu__details">Revisité<span class="menu__price">18 €</span></p>
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
+                </div>
+
+            </div>
+
+            <div class="menu__selection menu__selection--second-apparition">
+
+                <div class="menu__container-selection">
+
+                    <h3 class="menu__name">Macaron au chocolat d'exception</h3>
+                    <p class="menu__details">Et glace à la vanille de Madagascar<span class="menu__price">22 €</span></p>
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
+                </div>
+
+            </div>
+
+            <div class="menu__selection menu__selection--third-apparition">
+
+                <div class="menu__container-selection">
+                    <h3 class="menu__name">Mousse au chocolat</h3>
+                    <p class="menu__details">Au piment d'espelette<span class="menu__price">23 €</span></p>
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
+                </div>
+
+            </div>
+
+        </section>
+
+        <div class="button-container">
+            <button class="button-action">
+                Commander
+            </button>
+        </div>
 
     </main>
 
+    <footer>
+        <nav class="nav">
+            <h2 class="nav__logo">ohmyfood</h2>
+            <ul class="nav__container">
+                <li><a class="nav__link-icon nav__link--color" href="#" title="click here"><i
+                            class="fa-solid fa-utensils"></i>Proposer un
+                        restaurant</a></li>
+                <li><a class="nav__link-icon nav__link--color" href="#" title="click here"><i
+                            class="fa-solid fa-handshake-angle fa-sm"></i>Devenir
+                        partenaire</a></li>
+                <li><a class="nav__link nav__link--color" href="#" title="click here">Mentions légales</a></li>
+                <li><a class="nav__link nav__link--color" href="mailto:example@example.com"
+                        title="click here">Contact</a></li>
+            </ul>
+        </nav>
+    </footer>
 
 </body>
 
