Dans les fichiers html des menus "A la française", "le délice des sens" et "la pelette du goût" : Débogage avec rectifications dans les div des images pour le déploiement sur internet

--- a/menu_the_delite_of_the_senses.html
+++ b/menu_the_delite_of_the_senses.html
@@ -34,7 +34,7 @@
     </header>
 
     <div class="heading-image">
-        <img class="main-container__img" src="assets/img/le_délice_des_sens.jpg" alt="restaurant le délice des sens">
+        <img class="main-container__img" src="assets/img/Le_délice_des_sens.jpg" alt="restaurant le délice des sens">
     </div>
 
     <main class="main-container">
