--- a/menu_french_style.html
+++ b/menu_french_style.html
@@ -34,8 +34,7 @@
     </header>
 
     <div class="heading-image">
-        <img class="main-container__img" src="assets/img/A_la_Française.jpg"
-                    alt="restaurant à la Française">
+        <img class="main-container__img" src="assets/img/A_la_Française.jpg" alt="restaurant à la Française">
     </div>
 
     <main class="main-container">
