Modification des fichiers index.html et menu_the_enchanted_note.html : rectifications dans les div images avec ajout d'une majuscule et suppression d'un slash en trop.

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         title="restaurant gastronomique">
                         <div class="restaurant__card">
                             <div class="restaurant__container-img">
-                                <img class="restaurant__img" src="assets/img/le_délice_des_sens.jpg"
+                                <img class="restaurant__img" src="assets/img/Le_délice_des_sens.jpg"
                                     alt="restaurant le délice des sens">
                             </div>
                             <div class="restaurant__footer">
