-dans les 4 fichiers html des menus : rectification du nom de la class img, -rectification dans menu.scss :   déplacement du code "heading-image" qui n'est pas dans le "main-container" du html

--- a/menu_french_style.html
+++ b/menu_french_style.html
@@ -34,7 +34,7 @@
     </header>
 
     <div class="heading-image">
-        <img class="main-container__img" src="assets/img/A_la_Française.jpg" alt="restaurant à la Française">
+        <img class="heading-image__restaurant-img" src="assets/img/A_la_Française.jpg" alt="restaurant à la Française">
     </div>
 
     <main class="main-container">
