--- a/menu_the_enchanted_note.html
+++ b/menu_the_enchanted_note.html
@@ -34,7 +34,7 @@
     </header>
 
     <div class="heading-image">
-        <img class="main-container__img" src="assets/img/La_note_enchantée.jpg" alt="restaurant la note enchantée">
+        <img class="heading-image__restaurant-img" src="assets/img/La_note_enchantée.jpg" alt="restaurant la note enchantée">
     </div>
 
     <main class="main-container">
