--- a/menu_the_delite_of_the_senses.html
+++ b/menu_the_delite_of_the_senses.html
@@ -34,7 +34,7 @@
     </header>
 
     <div class="heading-image">
-        <img class="main-container__img" src="assets/img/Le_délice_des_sens.jpg" alt="restaurant le délice des sens">
+        <img class="heading-image__restaurant-img" src="assets/img/Le_délice_des_sens.jpg" alt="restaurant le délice des sens">
     </div>
 
     <main class="main-container">
