--- a/menu_the_palette_of_taste.html
+++ b/menu_the_palette_of_taste.html
@@ -34,7 +34,7 @@
     </header>
 
     <div class="heading-image">
-        <img class="main-container__img" src="assets/img/La_palette_du_goût.jpg" alt="restaurant La palette du goût">
+        <img class="heading-image__restaurant-img" src="assets/img/La_palette_du_goût.jpg" alt="restaurant La palette du goût">
     </div>
 
     <main class="main-container">
