--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
                         </div>
                     </a>
                     <!--coeur*2-->
-                    <button class="restaurant-like"><i class="fa-regular fa-heart"></i></button>
-                    <div class="restaurant-like__after">
-                        <div class="restaurant-like__after-part-right"></div>
-                        <div class="restaurant-like__after-part-middle"></div>
-                        <div class="restaurant-like__after-part-left"></div>
+                    <button class="like like--card-position"><i class="fa-regular fa-heart"></i></button>
+                    <div class="like-after like-after--card-position">
+                        <div class="like-after__part-right"></div>
+                        <div class="like-after__part-middle"></div>
+                        <div class="like-after__part-left"></div>
                     </div>
                 </div>
 
@@ -116,11 +116,11 @@
                         </div>
                     </a>
                     <!--coeur*2-->
-                    <button class="restaurant-like"><i class="fa-regular fa-heart"></i></button>
-                    <div class="restaurant-like__after">
-                        <div class="restaurant-like__after-part-right"></div>
-                        <div class="restaurant-like__after-part-middle"></div>
-                        <div class="restaurant-like__after-part-left"></div>
+                    <button class="like like--card-position"><i class="fa-regular fa-heart"></i></button>
+                    <div class="like-after like-after--card-position">
+                        <div class="like-after__part-right"></div>
+                        <div class="like-after__part-middle"></div>
+                        <div class="like-after__part-left"></div>
                     </div>
                 </div>
 
@@ -139,11 +139,11 @@
                         </div>
                     </a>
                     <!--coeur*2-->
-                    <button class="restaurant-like"><i class="fa-regular fa-heart"></i></button>
-                    <div class="restaurant-like__after">
-                        <div class="restaurant-like__after-part-right"></div>
-                        <div class="restaurant-like__after-part-middle"></div>
-                        <div class="restaurant-like__after-part-left"></div>
+                    <button class="like like--card-position"><i class="fa-regular fa-heart"></i></button>
+                    <div class="like-after like-after--card-position">
+                        <div class="like-after__part-right"></div>
+                        <div class="like-after__part-middle"></div>
+                        <div class="like-after__part-left"></div>
                     </div>
                 </div>
 
@@ -163,11 +163,11 @@
                         </div>
                     </a>
                     <!--coeur*2 pour switch-->
-                    <button class="restaurant-like"><i class="fa-regular fa-heart"></i></button>
-                    <div class="restaurant-like__after">
-                        <div class="restaurant-like__after-part-right"></div>
-                        <div class="restaurant-like__after-part-middle"></div>
-                        <div class="restaurant-like__after-part-left"></div>
+                    <button class="like like--card-position"><i class="fa-regular fa-heart"></i></button>
+                    <div class="like-after like-after--card-position">
+                        <div class="like-after__part-right"></div>
+                        <div class="like-after__part-middle"></div>
+                        <div class="like-after__part-left"></div>
                     </div>
                 </div>
             </div>
