--- a/menu_the_delite_of_the_senses.html
+++ b/menu_the_delite_of_the_senses.html
@@ -43,12 +43,12 @@
 
             <h1 class="main-container__restaurant">Le délice des sens</h1>
 
-            <button class="restaurant-like"><i class="fa-regular fa-heart"></i></button>
+            <button class="like like--menu-position"><i class="fa-regular fa-heart"></i></button>
 
-            <div class="restaurant-like__after ">
-                <div class="restaurant-like__after-part-right"></div>
-                <div class="restaurant-like__after-part-middle"></div>
-                <div class="restaurant-like__after-part-left"></div>
+            <div class="like-after like-after--menu-position">
+                <div class="like-after__part-right"></div>
+                <div class="like-after__part-middle"></div>
+                <div class="like-after__part-left"></div>
             </div>
 
         </div>
