--- a/menu_french_style.html
+++ b/menu_french_style.html
@@ -20,9 +20,16 @@
 <body>
 
     <div class="loader">
-        <div class="loader__heading">Oh</div>
-        <div class="loader__heading">my</div>
-        <div class="loader__heading">food<span> .</span><span> .</span><span> .</span></div>
+        <div class="loader__heading">
+            <div>Oh</div>
+            <div>my</div>
+            <div>food </div>
+        </div>
+        <div class="loader-dots">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
     </div>
 
     <header class="header-menu">
@@ -37,11 +44,11 @@
         <img class="heading-image__restaurant-img" src="assets/img/A_la_Française.jpg" alt="restaurant à la Française">
     </div>
 
-    <main class="main-container">
+    <main class="menu-main-container">
 
-        <div class="main-container__heading">
+        <div class="menu-main-container__heading">
 
-            <h1 class="main-container__restaurant">À la française</h1>
+            <h1 class="menu-main-container__restaurant">À la française</h1>
 
             <button class="like like--menu-position"><i class="fa-regular fa-heart"></i></button>
 
