--- a/menu_the_palette_of_taste.html
+++ b/menu_the_palette_of_taste.html
@@ -20,9 +20,16 @@
 <body>
 
     <div class="loader">
-        <div class="loader__heading">Oh</div>
-        <div class="loader__heading">my</div>
-        <div class="loader__heading">food<span> .</span><span> .</span><span> .</span></div>
+        <div class="loader__heading">
+            <div>Oh</div>
+            <div>my</div>
+            <div>food </div>
+        </div>
+        <div class="loader-dots">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
     </div>
 
     <header class="header-menu">
@@ -34,14 +41,15 @@
     </header>
 
     <div class="heading-image">
-        <img class="heading-image__restaurant-img" src="assets/img/La_palette_du_goût.jpg" alt="restaurant La palette du goût">
+        <img class="heading-image__restaurant-img" src="assets/img/La_palette_du_goût.jpg"
+            alt="restaurant La palette du goût">
     </div>
 
-    <main class="main-container">
+    <main class="menu-main-container">
 
-        <div class="main-container__heading">
+        <div class="menu-main-container__heading">
 
-            <h1 class="main-container__restaurant">La palette du goût</h1>
+            <h1 class="menu-main-container__restaurant">La palette du goût</h1>
 
             <button class="like like--menu-position"><i class="fa-regular fa-heart"></i></button>
 
@@ -93,7 +101,8 @@
 
                     <h3 class="menu__name">Oeuf au plat</h3>
 
-                    <p class="menu__details">Assaisonné à la truffe sur lit de cresson<span class="menu__price">20 €</span></p>
+                    <p class="menu__details">Assaisonné à la truffe sur lit de cresson<span class="menu__price">20
+                            €</span></p>
                     <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
 
@@ -116,7 +125,8 @@
                 <div class="menu__container-selection">
 
                     <h3 class="menu__name">Filet de boeuf aux herbes</h3>
-                    <p class="menu__details">Accompagnée de sa ribambelle de légumes croquants<span class="menu__price">40 €</span></p>
+                    <p class="menu__details">Accompagnée de sa ribambelle de légumes croquants<span
+                            class="menu__price">40 €</span></p>
                     <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
 
@@ -173,7 +183,8 @@
                 <div class="menu__container-selection">
 
                     <h3 class="menu__name">Macaron au chocolat d'exception</h3>
-                    <p class="menu__details">Et glace à la vanille de Madagascar<span class="menu__price">22 €</span></p>
+                    <p class="menu__details">Et glace à la vanille de Madagascar<span class="menu__price">22 €</span>
+                    </p>
                     <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
 
