-changement dans menu_the_enchanted_note.html : ajout d'un modificateur pour pouvoir positionner plus haut le titre "entrées" en version dektop compte tenu du décalage créé par le retour à la ligne des menus; -changements dans menu.scss : ajustement de la position du titre du restaurant et du coeur, agrandissement de la taille et diminution des marges des menus en version desktop, et ajout de la position spécifique du titre "entrées" en raison du décalage créé par le retour à la ligne du menu dans la carte "la note enchantée".

--- a/menu_the_enchanted_note.html
+++ b/menu_the_enchanted_note.html
@@ -64,8 +64,8 @@
 
             <div class="menu__title-container">
 
-                <h2 class="menu__heading">ENTRÉES</h2>
-                <div class="menu__underline"></div>
+                <h2 class="menu__heading menu__heading--larger">ENTRÉES</h2>
+                <div class="menu__underline menu__heading--larger"></div>
 
             </div>
 
