-rectifications dans les fichiers html de toutes les cartes avec les menus : suppression de deux div en trop; -rectification du bouton dans btn_new.scss, remplacement de l'élément button par une div, button ne pouvant pas être dans une ancre, et ajustement de la position du texte en conséquence.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             </div>
 
                             <div class="btn">
-                                <button class="btn__new">Nouveau</button>
+                                <div class="btn__new">Nouveau</div>
                             </div>
                         </div>
                     </a>
@@ -118,7 +118,7 @@
                                 <p>Charonne</p>
                             </div>
                             <div class="btn">
-                                <button class="btn__new">Nouveau</button>
+                                <div class="btn__new">Nouveau</div>
                             </div>
                         </div>
                     </a>
