--- a/menu_french_style.html
+++ b/menu_french_style.html
@@ -80,8 +80,6 @@
 
             </div>
 
-            </div>
-
             <div class="menu__selection menu__selection--second-apparition">
 
                 <div class="menu__container-selection">
@@ -128,8 +126,6 @@
 
             </div>
 
-            </div>
-
             <div class="menu__selection menu__selection--second-apparition">
 
                 <div class="menu__container-selection">
@@ -147,7 +143,8 @@
 
                     <h3 class="menu__name">Pigeonneau d'Ille-et-Vilaine</h3>
 
-                    <p class="menu__details">Sur son lit de gnocchis aux légumes<span class="menu__price">44 €</span></p>
+                    <p class="menu__details">Sur son lit de gnocchis aux légumes<span class="menu__price">44 €</span>
+                    </p>
                     <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
 
