-changement dans index.html : modifications du bouton like avec suppression des div du bouton like_after initialement créé pour le remplacer par l'icone "herat" version solid de font awesome, -modifications dans button_like.scss : suppression du bouton intialement créé, ajout du style pour le bouton de l'icone nouvellement insérée avec utilisation de background-clip permettant de lui appliquer une couleur graduée; -changements dans home_page.scss : ajustement de la position des icones  "heart" pour les superposer.

--- a/index.html
+++ b/index.html
@@ -97,11 +97,8 @@
                     </a>
                     <!--coeur*2-->
                     <button class="like like--card-position"><i class="fa-regular fa-heart"></i></button>
-                    <div class="like-after like-after--card-position">
-                        <div class="like-after__part-right"></div>
-                        <div class="like-after__part-middle"></div>
-                        <div class="like-after__part-left"></div>
-                    </div>
+                    <div class="like-after like-after--card-position"><i class="fa-solid fa-heart"></i></div>
+                    
                 </div>
 
                 <!--carte 2-->
@@ -123,12 +120,11 @@
                         </div>
                     </a>
                     <!--coeur*2-->
+                <div>
                     <button class="like like--card-position"><i class="fa-regular fa-heart"></i></button>
-                    <div class="like-after like-after--card-position">
-                        <div class="like-after__part-right"></div>
-                        <div class="like-after__part-middle"></div>
-                        <div class="like-after__part-left"></div>
-                    </div>
+                    <div class="like-after like-after--card-position"><i class="fa-solid fa-heart"></i></div>
+                </div>
+
                 </div>
 
                 <!--carte 3-->
@@ -147,11 +143,8 @@
                     </a>
                     <!--coeur*2-->
                     <button class="like like--card-position"><i class="fa-regular fa-heart"></i></button>
-                    <div class="like-after like-after--card-position">
-                        <div class="like-after__part-right"></div>
-                        <div class="like-after__part-middle"></div>
-                        <div class="like-after__part-left"></div>
-                    </div>
+                    <div class="like-after like-after--card-position"><i class="fa-solid fa-heart"></i></div>
+
                 </div>
 
                 <!--carte 4-->
@@ -171,11 +164,7 @@
                     </a>
                     <!--coeur*2 pour switch-->
                     <button class="like like--card-position"><i class="fa-regular fa-heart"></i></button>
-                    <div class="like-after like-after--card-position">
-                        <div class="like-after__part-right"></div>
-                        <div class="like-after__part-middle"></div>
-                        <div class="like-after__part-left"></div>
-                    </div>
+                    <div class="like-after like-after--card-position"><i class="fa-solid fa-heart"></i></div>
                 </div>
             </div>
 
