-changements dans index.html : suppression de  la div et  insertion des icones heart directement dans l'élément button pour lier leur positionnement; -modifications dans button_like.scss : nesting des sélecteurs, diminution de la taille du bouton, insertion des propriétés de l'icone "heart" visible à l'ouverture de la page ,  et ajout de la position absolute pour les deux icones afin qu'elles soitent directement placées l'une sur l'autre dans le bouton; -suppression dans home_page.scss de la position des icones qui sont directement placées dans le bouton avec la position absolute.

--- a/index.html
+++ b/index.html
@@ -96,10 +96,8 @@
                         </div>
                     </a>
                     <!--coeur*2-->
-                    <button class="like like--card-position"><i class="fa-regular fa-heart"></i></button>
-                    <div class="like-after like-after--card-position"><i class="fa-solid fa-heart"></i></div>
-                    
-                </div>
+                    <button class="like like--card-position"><span class="like__before"><i class="fa-regular fa-heart"></i></span><span class="like__after"><i class="fa-solid fa-heart"></i></span></button>
+                    </div>
 
                 <!--carte 2-->
                 <div class="restaurant">
@@ -120,11 +118,7 @@
                         </div>
                     </a>
                     <!--coeur*2-->
-                <div>
-                    <button class="like like--card-position"><i class="fa-regular fa-heart"></i></button>
-                    <div class="like-after like-after--card-position"><i class="fa-solid fa-heart"></i></div>
-                </div>
-
+                    <button class="like like--card-position"><span class="like__before"><i class="fa-regular fa-heart"></i></span><span class="like__after"><i class="fa-solid fa-heart"></i></span></button>   
                 </div>
 
                 <!--carte 3-->
@@ -142,9 +136,7 @@
                         </div>
                     </a>
                     <!--coeur*2-->
-                    <button class="like like--card-position"><i class="fa-regular fa-heart"></i></button>
-                    <div class="like-after like-after--card-position"><i class="fa-solid fa-heart"></i></div>
-
+                    <button class="like like--card-position"><span class="like__before"><i class="fa-regular fa-heart"></i></span><span class="like__after"><i class="fa-solid fa-heart"></i></span></button>   
                 </div>
 
                 <!--carte 4-->
@@ -163,8 +155,7 @@
                         </div>
                     </a>
                     <!--coeur*2 pour switch-->
-                    <button class="like like--card-position"><i class="fa-regular fa-heart"></i></button>
-                    <div class="like-after like-after--card-position"><i class="fa-solid fa-heart"></i></div>
+                    <button class="like like--card-position"><span class="like__before"><i class="fa-regular fa-heart"></i></span><span class="like__after"><i class="fa-solid fa-heart"></i></span></button>   
                 </div>
             </div>
 
