-changement dans button_like.scss : modification de la position et la taille du l'icone qui apparaît au clic; -dans tous les fichiers html des menus : insertion des icones "heart" directement dans l'élément bouton et par conséquent suppression de la div de l'icone qui apparaît au clic; -changements dans menu.scss : modification de la position du like pour l'aligner avec le titre et suppression de la position de l'icone "heart" qui apparaît au clic.

--- a/menu_the_palette_of_taste.html
+++ b/menu_the_palette_of_taste.html
@@ -51,13 +51,7 @@
 
             <h1 class="menu-main-container__restaurant">La palette du goût</h1>
 
-            <button class="like like--menu-position"><i class="fa-regular fa-heart"></i></button>
-
-            <div class="like-after like-after--menu-position">
-                <div class="like-after__part-right"></div>
-                <div class="like-after__part-middle"></div>
-                <div class="like-after__part-left"></div>
-            </div>
+            <button class="like like--menu-position"><span class="like__before"><i class="fa-regular fa-heart"></i></span><span class="like__after"><i class="fa-solid fa-heart"></i></span></button>
 
         </div>
 
