-changements dans index.html : mise en forme du document; -changements dans tous les fichiers html des menus : mise en forme du document, modification des class de l'image avec précision d'unbe class spécifique en fonction du zoom et positionnement appliqué, suppression de la class dans le h1 car non utilisée; -modifications dans typography.scss : mise en forme du document, augmentation de la taille du h1 et suppression du séléecteur inutilisé dans le conteneur du menu; -complément dans button_like.scss : ajout du hover pour faire apparaître le coeur au survol dans la version desktop et mise en forme du document; -changements dans container.scss : modifications des tailles et positions du conteneur des menus pour correspondance avec le visuel de la maquette en version mobile, et mise en forme du document; -modifications dans header.scss du margin pour correspondre au visuel en version mobile; -changements dans home_page.scss : modification du margin de l'entête pour correspondance au visuel de la version mobile et mise en forme du document; -modifications dans menu.scss : complément avec deux type d'ajustement de la taille et position des images des menus, modificiation de la taille des images en version desktop,  ajustement du padding de l'entête pour mettre à distance nom du restaurant et icone pour les versions mobile et desktop, diminution de la taille des menus ainsi que de leur border-radius et repositionnement de l'icone "check", insertion du hover pour animer le check au survol en version desktop; -modification dans mixin.scss du breakpoint de la version small-mobile pour éviter le retour à la ligne du nom des restaurants.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <h2 class="container-restaurant__heading">Restaurants</h2>
 
             <div class="container-restaurant__cards">
-                      <!--carte 1-->
+                <!--carte 1-->
                 <div class="restaurant">
                     <a class="restaurant__link" href="menu_the_palette_of_taste.html" title="restaurant gastronomique">
                         <div class="restaurant__card">
@@ -96,8 +96,10 @@
                         </div>
                     </a>
                     <!--coeur*2-->
-                    <button class="like like--card-position"><span class="like__before"><i class="fa-regular fa-heart"></i></span><span class="like__after"><i class="fa-solid fa-heart"></i></span></button>
-                    </div>
+                    <button class="like like--card-position"><span class="like__before"><i
+                                class="fa-regular fa-heart"></i></span><span class="like__after"><i
+                                class="fa-solid fa-heart"></i></span></button>
+                </div>
 
                 <!--carte 2-->
                 <div class="restaurant">
@@ -118,7 +120,9 @@
                         </div>
                     </a>
                     <!--coeur*2-->
-                    <button class="like like--card-position"><span class="like__before"><i class="fa-regular fa-heart"></i></span><span class="like__after"><i class="fa-solid fa-heart"></i></span></button>   
+                    <button class="like like--card-position"><span class="like__before"><i
+                                class="fa-regular fa-heart"></i></span><span class="like__after"><i
+                                class="fa-solid fa-heart"></i></span></button>
                 </div>
 
                 <!--carte 3-->
@@ -136,7 +140,9 @@
                         </div>
                     </a>
                     <!--coeur*2-->
-                    <button class="like like--card-position"><span class="like__before"><i class="fa-regular fa-heart"></i></span><span class="like__after"><i class="fa-solid fa-heart"></i></span></button>   
+                    <button class="like like--card-position"><span class="like__before"><i
+                                class="fa-regular fa-heart"></i></span><span class="like__after"><i
+                                class="fa-solid fa-heart"></i></span></button>
                 </div>
 
                 <!--carte 4-->
@@ -155,7 +161,9 @@
                         </div>
                     </a>
                     <!--coeur*2 pour switch-->
-                    <button class="like like--card-position"><span class="like__before"><i class="fa-regular fa-heart"></i></span><span class="like__after"><i class="fa-solid fa-heart"></i></span></button>   
+                    <button class="like like--card-position"><span class="like__before"><i
+                                class="fa-regular fa-heart"></i></span><span class="like__after"><i
+                                class="fa-solid fa-heart"></i></span></button>
                 </div>
             </div>
 
