--- a/menu_french_style.html
+++ b/menu_french_style.html
@@ -40,17 +40,20 @@
 
     </header>
 
-    <div class="heading-image">
-        <img class="heading-image__restaurant-img" src="assets/img/A_la_Française.jpg" alt="restaurant à la Française">
+    <div class="heading-image-first-dimension">
+        <img class="heading-image-first-dimension__restaurant-img" src="assets/img/A_la_Française.jpg"
+            alt="restaurant à la Française">
     </div>
 
     <main class="menu-main-container">
 
         <div class="menu-main-container__heading">
 
-            <h1 class="menu-main-container__restaurant">À la française</h1>
+            <h1>À la française</h1>
 
-            <button class="like like--menu-position"><span class="like__before"><i class="fa-regular fa-heart"></i></span><span class="like__after"><i class="fa-solid fa-heart"></i></span></button>
+            <button class="like like--menu-position"><span class="like__before"><i
+                        class="fa-regular fa-heart"></i></span><span class="like__after"><i
+                        class="fa-solid fa-heart"></i></span></button>
 
         </div>
 
