--- a/menu_the_palette_of_taste.html
+++ b/menu_the_palette_of_taste.html
@@ -40,8 +40,8 @@
 
     </header>
 
-    <div class="heading-image">
-        <img class="heading-image__restaurant-img" src="assets/img/La_palette_du_goût.jpg"
+    <div class="heading-image-first-dimension">
+        <img class="heading-image-first-dimension__restaurant-img" src="assets/img/La_palette_du_goût.jpg"
             alt="restaurant La palette du goût">
     </div>
 
@@ -49,9 +49,11 @@
 
         <div class="menu-main-container__heading">
 
-            <h1 class="menu-main-container__restaurant">La palette du goût</h1>
+            <h1>La palette du goût</h1>
 
-            <button class="like like--menu-position"><span class="like__before"><i class="fa-regular fa-heart"></i></span><span class="like__after"><i class="fa-solid fa-heart"></i></span></button>
+            <button class="like like--menu-position"><span class="like__before"><i
+                        class="fa-regular fa-heart"></i></span><span class="like__after"><i
+                        class="fa-solid fa-heart"></i></span></button>
 
         </div>
 
