--- a/menu_the_enchanted_note.html
+++ b/menu_the_enchanted_note.html
@@ -40,17 +40,20 @@
 
     </header>
 
-    <div class="heading-image">
-        <img class="heading-image__restaurant-img" src="assets/img/La_note_enchantée.jpg" alt="restaurant la note enchantée">
+    <div class="heading-image-second-dimension">
+        <img class="heading-image-second-dimension__restaurant-img" src="assets/img/La_note_enchantée.jpg"
+            alt="restaurant la note enchantée">
     </div>
 
     <main class="menu-main-container">
 
         <div class="menu-main-container__heading">
 
-            <h1 class="menu-main-container__restaurant">La note enchantée</h1>
+            <h1>La note enchantée</h1>
 
-            <button class="like like--menu-position"><span class="like__before"><i class="fa-regular fa-heart"></i></span><span class="like__after"><i class="fa-solid fa-heart"></i></span></button>
+            <button class="like like--menu-position"><span class="like__before"><i
+                        class="fa-regular fa-heart"></i></span><span class="like__after"><i
+                        class="fa-solid fa-heart"></i></span></button>
 
         </div>
 
