--- a/menu_the_palette_of_taste.html
+++ b/menu_the_palette_of_taste.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0">
-    <link rel="icon" type="image/png" href="assets/logo/ohmyfood.png" />
+    <link rel="icon" type="image/png" href="assets/logo/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Shrikhand&display=swap"
@@ -17,7 +17,7 @@
     <title>Ohmyfood : restaurant La palette du goût</title>
 </head>
 
-<body>
+<body class="palette-of-taste--bg-page">
 
     <div class="loader">
         <div class="loader__heading">
