-changement dans tous les fichiers html des menus : simplification du nommage des class pour les images; -modifications dans menu.scss : suppression du sélecteur return qui était en trop, modification des sélecteurs pour les images suite aux changements intervenus dans les fichiers html, utilisation d'une mixin pour les propriétés d'affichage de l'image utilisée en arrière plan dans la version desktop, diminution des délais pour les animations, modification des pixels en rem pour la propriété translate permettant de décaler les menus, utilisation d'une mixin pour les dimensions et des titre et paragraphes des menus rognés avec la propriété ellipsis, et suppression du sélecteur footer et de sa règle qui sont déplacés dans le fichier container.scss; -mise en forme du fichier button_action.scss; -changement dans button_like.scss : le délai de l'animation est raccourci; -modifications dans loader.scss : les durées et délais de l'animation sont raccourcis; -changements dans mixins.scss : création de deux mixins, l'une concernant l'affichage de l'image en arrière plan des menus pour la version desktop, l'autre concernant les règles de dimension et  rognage des titres et paragraphes des menus.

--- a/menu_french_style.html
+++ b/menu_french_style.html
@@ -40,8 +40,8 @@
 
     </header>
 
-    <div class="heading-image-first-dimension">
-        <img class="heading-image-first-dimension__restaurant-img" src="assets/img/A_la_Française.jpg"
+    <div class="heading-image">
+        <img class="heading-image__first-dimension" src="assets/img/A_la_Française.jpg"
             alt="restaurant à la Française">
     </div>
 
