--- a/menu_the_enchanted_note.html
+++ b/menu_the_enchanted_note.html
@@ -40,8 +40,8 @@
 
     </header>
 
-    <div class="heading-image-second-dimension">
-        <img class="heading-image-second-dimension__restaurant-img" src="assets/img/La_note_enchantée.jpg"
+    <div class="heading-image">
+        <img class="heading-image__second-dimension" src="assets/img/La_note_enchantée.jpg"
             alt="restaurant la note enchantée">
     </div>
 
