--- a/menu_the_palette_of_taste.html
+++ b/menu_the_palette_of_taste.html
@@ -40,8 +40,8 @@
 
     </header>
 
-    <div class="heading-image-first-dimension">
-        <img class="heading-image-first-dimension__restaurant-img" src="assets/img/La_palette_du_goût.jpg"
+    <div class="heading-image">
+        <img class="heading-image__first-dimension" src="assets/img/La_palette_du_goût.jpg"
             alt="restaurant La palette du goût">
     </div>
 
