--- a/menu_the_delite_of_the_senses.html
+++ b/menu_the_delite_of_the_senses.html
@@ -40,8 +40,8 @@
 
     </header>
 
-    <div class="heading-image-second-dimension">
-        <img class="heading-image-second-dimension__restaurant-img" src="assets/img/Le_délice_des_sens.jpg"
+    <div class="heading-image">
+        <img class="heading-image__second-dimension" src="assets/img/Le_délice_des_sens.jpg"
             alt="restaurant le délice des sens">
     </div>
 
